--- a/style.css
+++ b/style.css
@@ -1023,6 +1023,50 @@ Wraps to the next row if there's not enough spac*/
   }
 }
 
+#gallery {
+  background: cornsilk;
+  padding: 4rem 0rem;
+  text-align: center;
+  padding-top:0px;
+}
+
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  padding:0% 5%;
+}
+
+.gallery-card {
+  background-color: white;
+  border-radius: 16px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.gallery-card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.gallery-card img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  transition: transform 0.4s ease;
+}
+
+.gallery-card img:hover {
+  transform: scale(1.05);
+}
+
+#gallery a{
+  margin-top:10%;
+}
+
 .client-info p {
     margin: 3px 0 0;
     font-size: 0.9rem;
@@ -1388,17 +1432,26 @@ Wraps to the next row if there's not enough spac*/
 }
 
 .books-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 2rem;
+  margin-top: 2rem;
+ /*grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));*/
+  
 }
 
 .book-card {
-  background: white;
+  background: #ffffff;
+  padding: 2rem;
   border-radius: 12px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-  padding: 1.5rem;
-  transition: transform 0.3s ease;
+  box-shadow: 0 8px 18px rgba(0, 0, 0, 0.05);
+  width: 280px;
+  transition: box-shadow 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border : 1px ridge rgba(128, 128, 128, 0.487) ;
 }
 
 .book-card:hover {
@@ -1450,3 +1503,4 @@ footer {
     font-size: 0.9rem;
     color: gray;
 }     
+
